Reload ChromeVox panel when reloading ChromeVox into a new profile.

The ChromeVox panel needs to be reloaded when we load ChromeVox into a
new profile.

BUG=645142,646636
TESTED=enable ChromeVox on login screen, then sign in and test that panel still works, then switch to lock screen and back to login screen

Review-Url: https://chromiumcodereview.appspot.com/2422983004
Cr-Commit-Position: refs/heads/master@{#426202}

Former-commit-id: 63199b19ad4d7f82913d7fab619cb78237ed7440